--- a/package.json
+++ b/package.json
@@ -4,12 +4,17 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build"
+    "build": "vue-cli-service build --port=8080"
   },
   "dependencies": {
+    "@videojs-player/vue": "^1.0.0",
+    "axios": "^1.3.4",
     "core-js": "^3.8.3",
+    "js-cookie": "^3.0.5",
+    "video.js": "^8.3.0",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
+    "vue3-marquee": "^3.1.2",
     "vuex": "^4.0.0"
   },
   "devDependencies": {
